tests/invalid/bug214.err_exp
bug214.m:043: In predicate [38;5;87m`solve_mip_cg'/2:[39;49m
bug214.m:043:   type error: unsatisfied typeclass constraint:
bug214.m:043:     [38;5;203m`bug214.linear_expr(int, V_15, int)'[39;49m
